<resources>
    <string name="app_name">Hangman</string>
    <string name="start_view_title">Hangman</string>
    <string name="start_game_button">Start</string>

    <string name="guess_view_check_result_button">check result</string>
    <string name="guess_view_skip_button">skip</string>
    <string name="guess_view_status_title_answered">Answered:</string>
    <string name="guess_view_status_title_wrong">Wrong:</string>

    <string name="view_counter_text">"%1$d/%2$d"</string>


    <string name="result_view_status_title_answered">Answered:</string>
    <string name="result_view_status_other_status">"Correct words:%1$d   Wrong times:%2$d"</string>
    <string name="view_status_score">"score:%1$d"</string>

    <string name="result_view_submit_button">Submit</string>
    <string name="result_view_resume_button">Resume</string>
    <string name="result_view_exit_button">Exit</string>

    playerId
    <string name="end_view_title_playerId">Player id:</string>
    <string name="end_view_title_sessionId">Session id:</string>
    <string name="end_view_title_wrong_times">Wong times:</string>
    <string name="end_view_title_correct_words">Correct Words:</string>
    <string name="end_view_title_total_words">Total Words:</string>
    <string name="end_view_title_date_time">Datetime:</string>
    <string name="end_view_exit_button">Exit</string>

</resources>
