<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_layout_base_margin"
        android:layout_marginEnd="@dimen/view_layout_base_margin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/end_view_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="30pt"/>

        <LinearLayout
            android:id="@+id/end_view_values_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_view_score_text_view"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@string/end_view_title_playerId" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@string/end_view_title_sessionId" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@string/end_view_title_correct_words" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@string/end_view_title_wrong_times" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@string/end_view_title_total_words" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:text="@string/end_view_title_date_time" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/end_view_title_playerId_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/end_view_title_sessionId_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:id="@+id/end_view_title_correct_words_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/end_view_title_wrong_times_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/end_view_title_total_words_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/end_view_title_date_time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/end_view_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_view_values_layout"
            android:text="@string/end_view_exit_button"
            android:onClick="exitGame"
            app:bootstrapSize="lg"
            app:bootstrapBrand="success"
            app:roundedCorners="true"
            app:showOutline="true"/>
    </RelativeLayout>

</RelativeLayout>